bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: type mismatch;
 found   : String
 required: Int
  (x = litMessage()) match {
                 ^