bdr.BDR2.scala.code
var fini = false
var x = 0
while (fini==false)
	(x = litMessage()) match {
  case x if x=="E" => avance();
}